[package]
name = "lsm"
version = "0.1.0"
edition = "2021"
authors = ["Jonathan D.A. Jewell <hyperpolymath@protonmail.com>"]
license = "MIT OR AGPL-3.0-or-later"
repository = "https://github.com/hyperpolymath/lsm"
description = "Liquid State Machine - Spiking Neural Network reservoir in Rust"
keywords = ["spiking-neural-network", "reservoir-computing", "lsm", "neuromorphic", "machine-learning"]
categories = ["science", "algorithms"]
readme = "README.md"

[dependencies]
ndarray = { version = "0.15", features = ["rayon", "serde"] }
ndarray-rand = "0.16"
rand = "0.8"
rand_distr = "0.4"
rayon = "1.8"
serde = { version = "1.0", features = ["derive"] }
thiserror = "2.0"
tracing = "0.1"

[dev-dependencies]
approx = "0.5"
